--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
-    "dev:node": "NODE_ENV=development dotenvx run -f .env.development.local -- node --loader ts-node/esm ./src/index.ts"
+    "dev:local": "NODE_ENV=development dotenvx run -f .env.development.local -- node --loader ts-node/esm ./src/index.ts",
+    "test:local": "NODE_ENV=test dotenvx run -f .env.test.local -- jest --detectOpenHandles"
   },
   "devDependencies": {
+    "@eslint/js": "^9.13.0",
+    "@jest/globals": "^29.7.0",
+    "@playwright/test": "^1.48.1",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.7.7",
+    "eslint": "^9.13.0",
+    "globals": "^15.11.0",
+    "jest": "^29.7.0",
+    "prettier": "3.3.3",
+    "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "typescript-eslint": "^8.11.0"
   },
   "dependencies": {
     "@dotenvx/dotenvx": "^1.20.0"
